[gd_scene load_steps=8 format=3 uid="uid://cxrvpwl4vuwwf"]

[ext_resource type="Script" uid="uid://cauuw306eljgc" path="res://entities/Player/scipt/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://fkvgqm6rl0bl" path="res://entities/Player/assets/Idle.png" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://bly6bus6i8bb6" path="res://entities/Player/components/combat/CombatComponent.tscn" id="3_5u5ly"]
[ext_resource type="PackedScene" uid="uid://bs7e5xksucycg" path="res://entities/shared/components/health/HealthComponent.tscn" id="4_pco1l"]
[ext_resource type="PackedScene" uid="uid://bj2l3vuwmhasr" path="res://entities/Player/components/regen/RegenComponent.tscn" id="5_k7roy"]
[ext_resource type="PackedScene" uid="uid://be48i4wfalh6x" path="res://entities/shared/components/movement/MovementComponent.tscn" id="6_6jj1d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 7.0
height = 14.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_i3pqv")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="CombatComponent" parent="." instance=ExtResource("3_5u5ly")]

[node name="HealthComponent" parent="." instance=ExtResource("4_pco1l")]
max_hp = 10
has_iframes = true

[node name="RegenComponent" parent="." node_paths=PackedStringArray("health_comp") instance=ExtResource("5_k7roy")]
health_comp = NodePath("../HealthComponent")
regen_wait_time = 1.5

[node name="MovementComponent" parent="." instance=ExtResource("6_6jj1d")]
knockback_friction = 12.0
